доработки с модальными окнами

--- a/modal-map.html
+++ b/modal-map.html
@@ -166,11 +166,11 @@
                                                                               class="map-ordinary__modal-popup-button-container">
                                                                               <button
                                                                                     class="map-ordinary__modal-popup-button1"
-                                                                                    type="button"
+                                                                                    type="submit"
                                                                                     value="create">Создать</button>
                                                                               <button
                                                                                     class="map-ordinary__modal-popup-button2"
-                                                                                    type="button"
+                                                                                    type="submit"
                                                                                     value="cancel">Отмена</button>
                                                                         </div>
                                                                         <button
@@ -208,11 +208,11 @@
                                                                               class="map-random__modal-popup-button-container">
                                                                               <button
                                                                                     class="map-random__modal-popup-button1"
-                                                                                    type="button"
+                                                                                    type="submit"
                                                                                     value="create">Создать</button>
                                                                               <button
                                                                                     class="map-random__modal-popup-button2"
-                                                                                    type="button"
+                                                                                    type="submit"
                                                                                     value="cancel">Отмена</button>
                                                                         </div>
                                                                         <button
