вставила иконку в карточку, надо покарсить

--- a/components.html
+++ b/components.html
@@ -269,7 +269,8 @@
                               <h2 class="components__carts-headline">Карточки</h2>
                               <div class="components__carts-wrapper">
                                     <div class="components__cart1">
-                                          <img class="components__cart1-img" src="img/pic-1.svg" width="200" height="200" alt="Изображение">
+                                          <img class="components__cart1-img" src="img/pic-1.svg" width="200"
+                                                height="200" alt="Изображение">
                                           <h4 class="components__cart1-name">Типографика</h4>
                                           <p class="components__cart1-notice">Шрифтовые стили для структурирования
                                                 текстового контента</p>
