страница иконок и навигация

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       <meta name="description" content="">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>stride-design-system/typography</title>
 </head>
@@ -22,7 +21,7 @@
                         <a class="header__navigation-logo" href=""><img class="header__navigation-logo-image"
                                     src="img/blue-logo.svg" width="105" height="30" alt="Логотип"></a>
                         <ul class="header__navigation-menu">
-                              <li><a class="header__navigation-menu-item--current" href="#typography">Типографика</a>
+                              <li><a class="header__navigation-menu-item--current" href="index.html">Типографика</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="#tittle-style">Заголовки</a></li>
                                           <li><a class="header__navigation-item" href="#text-style">Текст</a></li>
@@ -30,7 +29,7 @@
                                           <li><a class="header__navigation-item" href="#span-style">Span</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Элементы формы</a>
+                              <li><a class="header__navigation-menu-item" href="form-elements.html">Элементы формы</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Поля</a></li>
                                           <li><a class="header__navigation-item" href="">Селекты</a></li>
@@ -40,20 +39,20 @@
                                           <li><a class="header__navigation-item" href="">Дополнительно</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Модальные окна</a>
+                              <li><a class="header__navigation-menu-item" href="modal-map.html">Модальные окна</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Уведомления</a></li>
                                           <li><a class="header__navigation-item" href="">Окна</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Блоки</a>
+                              <li><a class="header__navigation-menu-item" href="blocks.html">Блоки</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Хедеры</a></li>
                                           <li><a class="header__navigation-item" href="">Футеры</a></li>
                                           <li><a class="header__navigation-item" href="">Остальное</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Компоненты</a>
+                              <li><a class="header__navigation-menu-item" href="components.html">Компоненты</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Тултипы</a></li>
                                           <li><a class="header__navigation-item" href="">Табы</a></li>
@@ -62,7 +61,7 @@
                                           <li><a class="header__navigation-item" href="">Карточки</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Иконки</a>
+                              <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
                                           <li><a class="header__navigation-item" href="">Социальные сети</a></li>
