--- a/modal-map.html
+++ b/modal-map.html
@@ -21,7 +21,7 @@
                         <a class="header__navigation-logo" href=""><img class="header__navigation-logo-image"
                                     src="img/blue-logo.svg" width="105" height="30" alt="Логотип"></a>
                         <ul class="header__navigation-menu">
-                              <li><a class="header__navigation-menu-item" href="">Типографика</a>
+                              <li><a class="header__navigation-menu-item" href="index.html">Типографика</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Заголовки</a></li>
                                           <li><a class="header__navigation-item" href="">Текст</a></li>
@@ -29,7 +29,8 @@
                                           <li><a class="header__navigation-item" href="">Span</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item--current" href="">Элементы формы</a>
+                              <li><a class="header__navigation-menu-item" href="form-elements.html">Элементы
+                                          формы</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Поля</a></li>
                                           <li><a class="header__navigation-item" href="">Селекты</a></li>
@@ -39,20 +40,21 @@
                                           <li><a class="header__navigation-item" href="">Дополнительно</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Модальные окна</a>
+                              <li><a class="header__navigation-menu-item--current" href="modal-map.html">Модальные
+                                          окна</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Уведомления</a></li>
                                           <li><a class="header__navigation-item" href="">Окна</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Блоки</a>
+                              <li><a class="header__navigation-menu-item" href="blocks.html">Блоки</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Хедеры</a></li>
                                           <li><a class="header__navigation-item" href="">Футеры</a></li>
                                           <li><a class="header__navigation-item" href="">Остальное</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Компоненты</a>
+                              <li><a class="header__navigation-menu-item" href="components.html">Компоненты</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Тултипы</a></li>
                                           <li><a class="header__navigation-item" href="">Табы</a></li>
@@ -61,7 +63,7 @@
                                           <li><a class="header__navigation-item" href="">Карточки</a></li>
                                     </ul>
                               </li>
-                              <li><a class="header__navigation-menu-item" href="">Иконки</a>
+                              <li><a class="header__navigation-menu-item" href="icons.html">Иконки</a>
                                     <ul class="header__navigation-list">
                                           <li><a class="header__navigation-item" href="">Стандартный набор</a></li>
                                           <li><a class="header__navigation-item" href="">Социальные сети</a></li>
