--- a/icons.html
+++ b/icons.html
@@ -82,9 +82,96 @@
                         </header>
                         <section class="icon__material">
                               <h2 class="icon__headline">Material</h2>
-                              <h3 class="icon__name">Action</h3>
+                              <div class="icon__actions">
+                                    <h3 class="icon__name">Action</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-action.svg" alt="actions">
+                                    </div>
+                              </div>
+                              <div class="icon__alert">
+                                    <h3 class="icon__name">Alert</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-alert.svg" alt="alert">
+                                    </div>
+                              </div>
+                              <div class="icon__av">
+                                    <h3 class="icon__name">Av</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-av.svg" alt="av">
+                                    </div>
+                              </div>
+                              <div class="icon__content">
+                                    <h3 class="icon__name">Content</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-content.svg" alt="content">
+                                    </div>
+                              </div>
+                              <div class="icon__communication">
+                                    <h3 class="icon__name">Communication</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-communication.svg"
+                                                alt="communication">
+                                    </div>
+                              </div>
+                              <div class="icon__editor">
+                                    <h3 class="icon__name">Editor</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-editor.svg" alt="editor">
+                                    </div>
+                              </div>
+                              <div class="icon__file">
+                                    <h3 class="icon__name">File</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-file.svg" alt="file">
+                                    </div>
+                              </div>
+                              <div class="icon__hard-ware">
+                                    <h3 class="icon__name">Hard-ware</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-hardware.svg"
+                                                alt="hard-ware">
+                                    </div>
+                              </div>
+                              <div class="icon__image">
+                                    <h3 class="icon__name">Image</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-img.svg" alt="image">
+                                    </div>
+                              </div>
+                              <div class="icon__maps">
+                                    <h3 class="icon__name">Maps</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-maps.svg" alt="maps">
+                                    </div>
+                              </div>
+                              <div class="icon__navigation">
+                                    <h3 class="icon__name">Navigation</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-navigation.svg"
+                                                alt="navigation">
+                                    </div>
+                              </div>
+                              <div class="icon__places">
+                                    <h3 class="icon__name">Places</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-places.svg" alt="places">
+                                    </div>
+                              </div>
+                              <div class="icon__social">
+                                    <h3 class="icon__name">Social</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-social.svg" alt="social">
+                                    </div>
+                              </div>
+                              <div class="icon__toggle">
+                                    <h3 class="icon__name">Toggle</h3>
+                                    <div class="icon__sprite-wrapper">
+                                          <img class="icon__sprite-img" src="img/icon-sprite-toggle.svg" alt="toggle">
+                                    </div>
+                              </div>
 
                         </section>
+
                   </div>
             </main>
       </div>
