что-то там начала с селектами множественного выбора

--- a/form-elements.html
+++ b/form-elements.html
@@ -332,6 +332,78 @@
                                                 </div>
                                           </td>
                                     </tr>
+                                    <tr class="form-elements__select-style-multiple">
+                                          <td class="form-elements__select-style-name">Множественный выбор</td>
+                                          <td>
+                                                <div class="form-elements__select-multiple">
+                                                      <label class="form-elements__select-multiple-label">Лейбл</label>
+                                                      <div class="form-elements__field-multiple-select1">
+                                                            <div class="field-multiple-select1__item-container">
+                                                                  <span
+                                                                        class="field-multiple-select1__item">Первый</span>
+                                                                  <span
+                                                                        class="field-multiple-select1__item">Второй</span>
+                                                                  <span
+                                                                        class="field-multiple-select1__item">Третий</span>
+                                                            </div>
+                                                            <div class="field-multiple-select1__list-wrapper">
+                                                                  <ul class="field-multiple-select1__list">
+                                                                        <li
+                                                                              class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
+                                                                              Первый</li>
+                                                                        <li
+                                                                              class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
+                                                                              Второй</li>
+                                                                        <li
+                                                                              class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
+                                                                              Третий</li>
+                                                                        <li class="field-multiple-select1__list-item">
+                                                                              Четвертый</li>
+                                                                        <li class="field-multiple-select1__list-item">
+                                                                              Пятый</li>
+                                                                        <li class="field-multiple-select1__list-item">
+                                                                              Шестой</li>
+                                                                  </ul>
+                                                            </div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__select-multiple">
+                                                      <label class="form-elements__select-multiple-label">Лейбл</label>
+                                                      <div class="form-elements__field-multiple-select2">
+                                                            <div class="field-multiple-select2__item-container">
+                                                                  <span
+                                                                        class="field-multiple-select2__item">Первый</span>
+                                                                  <span
+                                                                        class="field-multiple-select2__item">Второй</span>
+                                                                  <span
+                                                                        class="field-multiple-select2__item">Третий</span>
+                                                            </div>
+                                                            <div class="field-multiple-select2__list-wrapper"></div>
+                                                            <ul class="field-multiple-select2__list">
+                                                                  <li
+                                                                        class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
+                                                                        Первый</li>
+                                                                  <li
+                                                                        class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
+                                                                        Второй</li>
+                                                                  <li
+                                                                        class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
+                                                                        Третий</li>
+                                                                  <li class="field-multiple-select2__list-item">
+                                                                        Четвертый</li>
+                                                                  <li class="field-multiple-select2__list-item">
+                                                                        Пятый</li>
+                                                                  <li class="field-multiple-select2__list-item">
+                                                                        Шестой</li>
+                                                            </ul>
+                                                      </div>
+
+
+                                                </div>
+                                          </td>
+                                    </tr>
                               </table>
                         </section>
                         <section class="form-elements__button-style">
