--- a/form-elements.html
+++ b/form-elements.html
@@ -348,21 +348,24 @@
                                                             </div>
                                                             <div class="field-multiple-select1__list-wrapper">
                                                                   <ul class="field-multiple-select1__list">
-                                                                        <li
-                                                                              class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
-                                                                              Первый</li>
-                                                                        <li
-                                                                              class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
-                                                                              Второй</li>
-                                                                        <li
-                                                                              class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
-                                                                              Третий</li>
-                                                                        <li class="field-multiple-select1__list-item">
-                                                                              Четвертый</li>
-                                                                        <li class="field-multiple-select1__list-item">
-                                                                              Пятый</li>
-                                                                        <li class="field-multiple-select1__list-item">
-                                                                              Шестой</li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
+                                                                                    Первый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
+                                                                                    Второй</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select1__list-item field-multiple-select1__list-item--curent">
+                                                                                    Третий</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select1__list-item">
+                                                                                    Четвертый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select1__list-item">
+                                                                                    Пятый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select1__list-item">
+                                                                                    Шестой</a></li>
                                                                   </ul>
                                                             </div>
                                                       </div>
@@ -380,26 +383,29 @@
                                                                   <span
                                                                         class="field-multiple-select2__item">Третий</span>
                                                             </div>
-                                                            <div class="field-multiple-select2__list-wrapper"></div>
-                                                            <ul class="field-multiple-select2__list">
-                                                                  <li
-                                                                        class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
-                                                                        Первый</li>
-                                                                  <li
-                                                                        class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
-                                                                        Второй</li>
-                                                                  <li
-                                                                        class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
-                                                                        Третий</li>
-                                                                  <li class="field-multiple-select2__list-item">
-                                                                        Четвертый</li>
-                                                                  <li class="field-multiple-select2__list-item">
-                                                                        Пятый</li>
-                                                                  <li class="field-multiple-select2__list-item">
-                                                                        Шестой</li>
-                                                            </ul>
+                                                            <div class="field-multiple-select2__list-wrapper">
+                                                                  <ul class="field-multiple-select2__list">
+                                                                        <li> <a href=""
+                                                                                    class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
+                                                                                    Первый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
+                                                                                    Второй</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select2__list-item field-multiple-select2__list-item--curent">
+                                                                                    Третий</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select2__list-item">
+                                                                                    Четвертый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select2__list-item">
+                                                                                    Пятый</a></li>
+                                                                        <li><a href=""
+                                                                                    class="field-multiple-select2__list-item">
+                                                                                    Шестой</a></li>
+                                                                  </ul>
+                                                            </div>
                                                       </div>
-
 
                                                 </div>
                                           </td>
@@ -993,6 +999,8 @@
                   </div>
             </main>
       </div>
+
+      <script src="js/scripts.js"></script>
 </body>
 
 </html>
